Closed Bug 1535459 Opened 6 years ago Closed 5 years ago

Perma tier2- devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Test timed out -

Categories

(Core Graveyard :: Web Replay, defect, P5)

defect

Tracking

(firefox-esr60 unaffected, firefox66 unaffected, firefox67 wontfix, firefox68 wontfix, firefox69 fixed)

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bhackett1024)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [retriggered][comment 28][stockwell disable-recommended])

Crash Data

Attachments

(2 files)

#[markdown(off)]
Filed by: apavel [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=233960604&repo=autoland

https://queue.taskcluster.net/v1/task/Q7N0aCofRuqWJf9S0uvq0g/runs/0/artifacts/public/logs/live_backing.log

20:15:00 INFO - TEST-START | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js
20:15:00 INFO - GECKO(801) | MIDDLEMAN 809 /var/folders/1n/fgw1wrbj2b5647p5_8cp11k000000w/T/TempRecording.801.1
20:15:00 INFO - GECKO(801) | RECORDING 810 /var/folders/1n/fgw1wrbj2b5647p5_8cp11k000000w/T/TempRecording.801.1
20:15:02 INFO - GECKO(801) | Exiting due to channel error.
20:15:02 INFO - GECKO(801) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x1F0088,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
20:15:15 INFO - GECKO(801) | 2019-03-14 20:15:15.278 firefox[801:3823] Persistent UI failed to open file file:///Users/cltbld/Library/Saved%20Application%20State/org.mozilla.nightly.savedState/window_1.data: No such file or directory (2)
20:15:45 INFO - TEST-INFO | started process screencapture
20:15:46 INFO - TEST-INFO | screencapture: exit 0
20:15:46 INFO - Buffered messages logged at 20:15:00
20:15:46 INFO - Entering test bound
20:15:46 INFO - Waiting for event: 'RecordingFinished' on [object ParentProcessMessageManager].
20:15:46 INFO - Buffered messages logged at 20:15:02
20:15:46 INFO - Console message: [JavaScript Error: "remote browser crashed while on about:blank
20:15:46 INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 8}]
20:15:46 INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:8:8
20:15:46 INFO - EventListener.handleEvent*e10s_init@chrome://mochikit/content/mochitest-e10s-utils.js:6:10
20:15:46 INFO - testInit@chrome://mochikit/content/browser-test.js:103:5
20:15:46 INFO - setTimeout handler*@chrome://mochikit/content/browser-test.js:21:1
20:15:46 INFO - loadChromeScripts@jar:file:///var/folders/1n/fgw1wrbj2b5647p5_8cp11k000000w/T/tmpnluLBP.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:13:25
20:15:46 INFO - loadMochitest@jar:file:///var/folders/1n/fgw1wrbj2b5647p5_8cp11k000000w/T/tmpnluLBP.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:112:3
20:15:46 INFO - @tests/mochitest/runtests.py:1772:5
20:15:46 INFO - @tests/mochitest/runtests.py:1773:8
20:15:46 INFO - evaluate.sandbox/promise<@chrome://marionette/content/evaluate.js:128:10
20:15:46 INFO - evaluate.sandbox@chrome://marionette/content/evaluate.js:106:17
20:15:46 INFO - GeckoDriver.prototype.execute_@chrome://marionette/content/driver.js:1029:28
20:15:46 INFO - async*GeckoDriver.prototype.executeScript@chrome://marionette/content/driver.js:911:29
20:15:46 INFO - despatch@chrome://marionette/content/server.js:289:40
20:15:46 INFO - execute@chrome://marionette/content/server.js:262:16
20:15:46 INFO - onPacket/<@chrome://marionette/content/server.js:235:20
20:15:46 INFO - onPacket@chrome://marionette/content/server.js:236:9
20:15:46 INFO - _onJSONObjectReady/<@chrome://marionette/content/transport.js:492:20
20:15:46 INFO -
20:15:46 INFO - Buffered messages finished
20:15:46 INFO - TEST-UNEXPECTED-FAIL | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Test timed out -
20:15:46 INFO - Removing tab.
20:15:46 INFO - Waiting for event: 'TabClose' on [object XULElement].
20:15:46 INFO - Got event: 'TabClose' on [object XULElement].
20:15:46 INFO - Tab removed and finished closing
20:15:46 INFO - GECKO(801) | MEMORY STAT vsizeMaxContiguous not supported in this build configuration.
20:15:46 INFO - GECKO(801) | MEMORY STAT | vsize 4401MB | residentFast 322MB | heapAllocated 102MB

Summary: Intermittent devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Test timed out - → Perma tier2- devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Test timed out -
Flags: needinfo?(dtownsend)

Brian is looking after the web replay tests.

Flags: needinfo?(dtownsend) → needinfo?(bhackett1024)

looks like webreplay fails to start as well. So the repro should be fairly simple
https://crash-stats.mozilla.org/report/index/3afcb441-92d1-4601-a03a-64d180190315

I'd be a little surprised if bug 1535367 caused this, but give me a shout if you need help.

Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b64e2db59556 Create BrowsingContext in middleman processes.

I pushed this to unbreak things while waiting for review.

Flags: needinfo?(bhackett1024)
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Assignee: nobody → bhackett1024
Crash Signature: [@ nsWebBrowser::Create]

Brian, this bug is marked as fixed for 67 but the crash for the signatures that corresponds to bug 1535614 that you marked as a duplicate of this bug didn't go down. Can you investigate please? Thanks

Status: RESOLVED → REOPENED
Flags: needinfo?(bhackett1024)
Resolution: FIXED → ---

(In reply to Pascal Chevrel:pascalc from comment #13)

Brian, this bug is marked as fixed for 67 but the crash for the signatures that corresponds to bug 1535614 that you marked as a duplicate of this bug didn't go down. Can you investigate please? Thanks

Hi, the crash in bug 1535614 is one where web replay is enabled, which is an experimental/unsupported configuration. There can be other crashes in nsWebBrowser::Create, but these will have a different underlying cause from this bug and the crash in bug 1535614.

Flags: needinfo?(bhackett1024)
Has Regression Range: --- → yes
Flags: needinfo?(bhackett1024)
Flags: needinfo?(jporter+bmo)

I can take care of fixing the web replay test failures after bug 1493225 relands.

Flags: needinfo?(bhackett1024)

I also took a brief look at this locally, but the test in question fails both with and without the patch for me on Linux (I don't have a macOS machine to test on, unfortunately). Once I reland the patches (probably Monday so no one has to spend time on the weekend to back it out again if there's a problem :)), I'm happy to help out if there's anything I can do to make sure this bug isn't a problem.

Status: REOPENED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → INCOMPLETE

Brian can you take a look at this too? the fix in bug 1483350 did not work for this as well.

There are 137 total failures in the last 6 days all on macosx1010-64-shippable opt.

Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=248399078&repo=autoland&lineNumber=954

07:29:40 INFO - TEST-START | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js
07:29:40 INFO - GECKO(1978) | MIDDLEMAN 1987 /var/folders/q2/t9n14kms3l9b5hjvfhnkjb_w00000x/T/TempRecording.1978.1
07:29:40 INFO - GECKO(1978) | RECORDING 1988 /var/folders/q2/t9n14kms3l9b5hjvfhnkjb_w00000x/T/TempRecording.1978.1
07:29:41 INFO - GECKO(1978) | Exiting due to channel error.
07:29:54 INFO - GECKO(1978) | 2019-05-26 07:29:54.871 firefox[1978:17174] Persistent UI failed to open file file:///Users/cltbld/Library/Saved%20Application%20State/org.mozilla.nightly.savedState/window_1.data: No such file or directory (2)
07:29:57 INFO - GECKO(1978) | console.info: services.settings: Initialize Remote Settings
07:30:25 INFO - TEST-INFO | started process screencapture
07:30:25 INFO - TEST-INFO | screencapture: exit 0
07:30:25 INFO - Buffered messages logged at 07:29:40
07:30:25 INFO - Entering test bound
07:30:25 INFO - Waiting for event: 'RecordingFinished' on [object ParentProcessMessageManager].
07:30:25 INFO - Buffered messages logged at 07:29:41
07:30:25 INFO - Console message: [JavaScript Error: "remote browser crashed while on about:blank
07:30:25 INFO - " {file: "chrome://mochikit/content/mochitest-e10s-utils.js" line: 8}]
07:30:25 INFO - e10s_init/<@chrome://mochikit/content/mochitest-e10s-utils.js:8:8
07:30:25 INFO - EventListener.handleEvente10s_init@chrome://mochikit/content/mochitest-e10s-utils.js:6:10
07:30:25 INFO - testInit@chrome://mochikit/content/browser-test.js:105:5
07:30:25 INFO - setTimeout handler
@chrome://mochikit/content/browser-test.js:23:1
07:30:25 INFO - loadChromeScripts@jar:file:///var/folders/q2/t9n14kms3l9b5hjvfhnkjb_w00000x/T/tmpsLfrnG.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:13:25
07:30:25 INFO - loadMochitest@jar:file:///var/folders/q2/t9n14kms3l9b5hjvfhnkjb_w00000x/T/tmpsLfrnG.mozrunner/extensions/mochikit@mozilla.org.xpi!/api.js:112:3
07:30:25 INFO - @tests/mochitest/runtests.py:1783:5
07:30:25 INFO - @tests/mochitest/runtests.py:1784:8
07:30:25 INFO - evaluate.sandbox/promise<@chrome://marionette/content/evaluate.js:128:10
07:30:25 INFO - evaluate.sandbox@chrome://marionette/content/evaluate.js:106:17
07:30:25 INFO - GeckoDriver.prototype.execute_@chrome://marionette/content/driver.js:1029:28
07:30:25 INFO - async*GeckoDriver.prototype.executeScript@chrome://marionette/content/driver.js:911:29
07:30:25 INFO - despatch@chrome://marionette/content/server.js:289:40
07:30:25 INFO - execute@chrome://marionette/content/server.js:262:16
07:30:25 INFO - onPacket/<@chrome://marionette/content/server.js:235:20
07:30:25 INFO - onPacket@chrome://marionette/content/server.js:236:9
07:30:25 INFO - _onJSONObjectReady/<@chrome://marionette/content/transport.js:492:20
07:30:25 INFO -
07:30:25 INFO - Buffered messages finished
07:30:25 INFO - TEST-UNEXPECTED-FAIL | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | Test timed out -
07:30:25 INFO - Removing tab.
07:30:25 INFO - Waiting for event: 'TabClose' on [object XULElement].
07:30:25 INFO - Got event: 'TabClose' on [object XULElement].
07:30:25 INFO - Tab removed and finished closing
07:30:25 INFO - GECKO(1978) | MEMORY STAT vsizeMaxContiguous not supported in this build configuration.
07:30:25 INFO - GECKO(1978) | MEMORY STAT | vsize 5423MB | residentFast 313MB | heapAllocated 100MB
07:30:25 INFO - TEST-OK | devtools/client/webreplay/mochitest/browser_dbg_rr_breakpoints-01.js | took 45234ms

Flags: needinfo?(bhackett1024)
Whiteboard: [retriggered] → [retriggered][stockwell needswork:owner]
Whiteboard: [retriggered][stockwell disable-recommended] → [retriggered][comment 28]

Web replay was broken by some recent IPC changes, which the above patch fixes. Since this started when bug 1483350 was causing the web replay tests to fail anyways on treeherder, I'm not sure exactly which change regressed this.

Flags: needinfo?(bhackett1024)
Pushed by csabou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a2bc45cc8cac Make sure ContentChild is connected in middleman processes, r=mccr8.
Status: REOPENED → RESOLVED
Closed: 6 years ago5 years ago
Resolution: --- → FIXED

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

this is not needed on beta

Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: