Bug 1535459 - Make sure ContentChild is connected in middleman processes, r=mccr8.

Differential Revision: https://phabricator.services.mozilla.com/D32630